--- a/vanilla-redux/index.html
+++ b/vanilla-redux/index.html
@@ -8,6 +8,6 @@
         <h1>0</h1>
         <button id="increase">+1</button>
         <button id="decrease">-1</button>
-        <script src="./index.js"></script>
+        <script src="./index.js?ver=1"></script>
     </body>
 </html>
